--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "antd": "^5.17.2",
     "axios": "^1.6.8",
     "flowbite": "^2.3.0",
+    "flowbite-react": "^0.9.0",
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
